--- a/LLM_Model/llm-baichuan/main.ipynb
+++ b/LLM_Model/llm-baichuan/main.ipynb
@@ -2,52 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35d468d0-4fb6-4b83-b9c3-7dade083b1ba",
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "710b66bb-907e-400c-bf31-3fd6b77c8aa4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# os.environ['TRANSFORMERS_CACHE'] = '/home/ec2-user/SageMaker/cache/'\n",
-    "\n",
-    "\n",
-    "# from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(\"csdc-atl/baichuan-7B-chat\", trust_remote_code=True)\n",
-    "# model = AutoModelForCausalLM.from_pretrained(\"csdc-atl/baichuan-7B-chat\", trust_remote_code=True).half().cuda()\n",
-    "# response, history = model.chat(tokenizer, \"“面朝大海，春暖花开”的出处是？\", history=[])\n",
-    "# print(response)\n",
-    "# response, history = model.chat(tokenizer, \"能不能把这一首诗完整背诵一下\", history=history)\n",
-    "# print(response)\n",
-    "\n",
-    "\n",
-    "# # from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "\n",
-    "# # tokenizer = AutoTokenizer.from_pretrained(\"baichuan-inc/Baichuan-7B\", trust_remote_code=True)\n",
-    "# # model = AutoModelForCausalLM.from_pretrained(\"baichuan-inc/Baichuan-7B\", device_map=\"auto\", trust_remote_code=True)\n",
-    "# # #,offload_folder\n",
-    "# # inputs = tokenizer('登鹳雀楼->王之涣\\n夜雨寄北->', return_tensors='pt')\n",
-    "# # inputs = inputs.to('cuda:0')\n",
-    "# # pred = model.generate(**inputs, max_new_tokens=64,repetition_penalty=1.1)\n",
-    "# # print(tokenizer.decode(pred.cpu()[0], skip_special_tokens=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "33d70eb6-070e-4d84-9c8f-5ec3572a74fb",
    "metadata": {
@@ -60,42 +14,6 @@
     "# client = boto3.client('sagemaker')\n",
     "\n",
     "# response = client.delete_endpoint_config(EndpointConfigName='pytorch-inference-baichuan-v1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ca3850c3-01f8-4a24-b381-64bf7895f38d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "!rm -rf src\n",
-    "!mkdir src"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a7a04bc-dfaa-4786-829c-ca28f86286fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ./src/serving.properties\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile ./src/serving.properties\n",
-    "engine=DeepSpeed\n",
-    "option.tensor_parallel_degree=1\n",
-    "option.s3url=s3://sagemaker-us-east-1-310850127430/baichuan7b/\n",
-    "batch_size=2\n",
-    "max_batch_delay=50"
    ]
   },
   {
@@ -254,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_amazonei_pytorch_latest_p37",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_amazonei_pytorch_latest_p37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -268,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
