--- a/LLM_Model/llm-chinese2/deploy_model_acc.ipynb
+++ b/LLM_Model/llm-chinese2/deploy_model_acc.ipynb
@@ -111,6 +111,9 @@
     "\n",
     "inference_image_uri = f\"763104351884.dkr.ecr.{region}.amazonaws.com/djl-inference:0.22.1-deepspeed0.9.2-cu118\"\n",
     "\n",
+    "# image_uri in china region\n",
+    "#inference_image_uri = f\"727897471807.dkr.ecr.cn-north-1.amazonaws.com.cn/djl-inference:0.22.1-deepspeed0.9.2-cu118\"\n",
+    "\n",
     "# endpoint_name = sagemaker.utils.name_from_base(code_tarname.replace('_','-'))\n",
     "endpoint_name = \"pytorch-inference-llm-cn-v2\""
    ]
