--- a/LLM_Model/llm-baichuan/main.ipynb
+++ b/LLM_Model/llm-baichuan/main.ipynb
@@ -172,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_amazonei_pytorch_latest_p37",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_pytorch_latest_p37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
