--- a/Script-Doc.ipynb
+++ b/Script-Doc.ipynb
@@ -493,6 +493,7 @@
     "    titles = []\n",
     "    paragraphs = []\n",
     "    sentences = []\n",
+    "    pages = []\n",
     "    para = ''\n",
     "    con = 0\n",
     "    para_split = \"\"\n",
@@ -501,6 +502,7 @@
     "        titles.append(title)\n",
     "        sentences.append(d.page_content)\n",
     "#        print(\"sentences:\",d.page_content)\n",
+    "        pages.append(d.metadata['page'])\n",
     "        searchObj = re.search( \"(\"+str(d.metadata['page']-1)+'){0,1}(\\d{1,3}-\\d{1,3}\\.)', d.page_content)\n",
     "        if searchObj: \n",
     "            if para_split != searchObj.group(2):\n",
@@ -517,7 +519,7 @@
     "        para += d.page_content\n",
     "    paragraphs += [para for _ in range(con)]\n",
     "    print(len(titles), len(sentences),len(paragraphs))\n",
-    "    df = pd.DataFrame({'title':titles, 'paragraph':paragraphs, 'sentence':sentences})\n",
+    "    df = pd.DataFrame({'title':titles, 'paragraph':paragraphs, 'sentence':sentences,'page':pages})\n",
     "    return df\n",
     "\n",
     "def get_vector(q):\n",
@@ -529,12 +531,12 @@
     "    return hfp.predict({'inputs':[q]})[0][0][0]\n",
     "\n",
     "def embbeding(df):\n",
-    "    df['title_vector'] = ''\n",
+    "#    df['title_vector'] = ''\n",
     "    df['sentence_vector'] = ''\n",
     "    title_vector = str(get_vector(df.iloc[0, 0]))\n",
     "    for i in range(len(df)):\n",
     "#         df.iloc[i, 5] = title_vector\n",
-    "        df.iloc[i, 3] = str(get_vector(df.iloc[i, 2]))\n",
+    "        df.iloc[i, 4] = str(get_vector(df.iloc[i, 2]))\n",
     "        print('\\r embbeding %i out of %i finished'%(i, len(df)), end='')\n",
     "    return df\n",
     "\n",
@@ -593,7 +595,8 @@
     "        second = json.dumps({\"title\": str(df.iloc[i-id_start, 0]), \n",
     "                     \"paragraph\": str(df.iloc[i-id_start, 1]), \n",
     "                     \"sentence\": str(df.iloc[i-id_start, 2]), \n",
-    "                     \"sentence_vector\": json.loads(df.iloc[i-id_start, 3])},\n",
+    "                     \"sentence_vector\": json.loads(df.iloc[i-id_start, 4]),\n",
+    "                     \"page\": df.iloc[i-id_start, 3]},\n",
     "                   ensure_ascii=False) + \"\\n\"\n",
     "        payloads += first + second\n",
     "    # print(payloads)\n",
@@ -647,9 +650,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -661,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
